  * genisoimage/genisoimage.[c1]: Add command-line support for
    -jigdo-template-compress
  * genisoimage/sha1.h: Fix a type issue that broke sha1 support
    on 64-bit arches.
  * genisoimage/checksum.[ch]: Added test code; changed internal
    layout slightly to make for easier debug.
  * genisoimage: Applied patch from Roman Rakus <rrakus@redhat.com> to
    preserve directory permissions.
  * genisoimage: Add (some of) a patch from Ivan Shmakov. "-o -" will
    now write to stdout, as typical for command line programs.

 -- Steve McIntyre <93sam@debian.org>  Mon, 25 May 2008 21:22:26 +0100

cdrkit (1.1.7.1) RELEASED; urgency=low

  [ Steve McIntyre ]
  * Re-spin the 1.1.7 release with a few silly release process errors fixed.

 -- Steve McIntyre <93sam@debian.org>  Mon, 17 Mar 2008 21:25:56 +0000

cdrkit (1.1.7) RELEASED; urgency=low

  [ Harald Hoyer ]
  * lots of fixes to prevent gcc warnings
  * Fix for Joliet directory length bug in genisoimage
	
  [ Peter Samuelson ]
  * wodim.1: small fixes.

  [ Steve McIntyre ]
  * genisoimage/jte.c: add support for bzip2-compressed templates
  * genisoimage/jte.c: fix bzip2-compressed template data to be
    compatible with jigdo.
  * genisoimage/jte.c: fix exclude list handling.
  * genisoimage/checksum.[ch]: Add a generic infrastructure for
    checksums so we can use sha1/<whatever> as well as just
    md5sum. Will make things much faster for generating sha1sums for
    images and jigdos.
  * genisoimage/sha1.[ch]: Add GPL-licensed SHA1 implementation.
  * s/mkisofs/genisoimage/ in ABOUT

 -- Steve McIntyre <93sam@debian.org>  Mon, 17 Mar 2008 20:07:58 +0000

cdrkit (1.1.6) RELEASED; urgency=low

  [ Vladimir Nadvornik ]
  * genisoimage/eltorito.c: care about inhibit flags when preparing eltorito
    boot catalog directory entry, avoiding possible crashes

  [ Eduard Bloch]
  * ALL: customize the base manpage subdirectory below PREFIX using the new
    MANSUBDIR variable