@@ -11,8 +11,9 @@ cdrkit (1.1.8) UNRELEASED; urgency=low
     layout slightly to make for easier debug.
   * genisoimage: Applied patch from Roman Rakus <rrakus@redhat.com> to
     preserve directory permissions.
-  * genisoimage: Add (some of) a patch from Ivan Shmakov. "-o -" will
-    now write to stdout, as typical for command line programs.
+  * genisoimage: Add a patch from Ivan Shmakov. "-o -" will now write
+    to stdout, as typical for command line programs. And we will try
+    not to corrupt stdout by default if it's a terminal.
 
  -- Steve McIntyre <93sam@debian.org>  Mon, 25 May 2008 21:22:26 +0100
 
